test-cases/final-dump/resource_error.exp
Error detected during resource checking of module(s) resource_error
[91mfinal-dump/resource_error.wybe:1:41: Call to resourceful proc without ! resource marker: wybe.io.<4>println("shouldn't work: no ! before println call":wybe.string @resource_error:nn:nn)
[0m
